--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@apollo/federation": "^0.16.4",
     "@types/graphql": "^14.5.0",
     "apollo-server-express": "^2.14.2",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-import": "^1.0.2",
